--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <link href="home_page.css" type="text/css" rel="stylesheet"/>
+ <link href="main.css" type="text/css" rel="stylesheet"/>
   <head>
     <meta charset="utf-8">
     <title></title>
